Set up page structure

--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -1,21 +1,21 @@
 ﻿<ul class="menubar-list">
     <li class="menubar-listitem">
-        <a class="menubar-listitem-a">
+        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Index">
             <i class="fa fa-home" aria-hidden="true"></i>
         </a>
     </li>
     <li class="menubar-listitem">
-        <a class="menubar-listitem-a">
+        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Rules">
             <i class="fa fa-legal" aria-hidden="true"></i>
         </a>
     </li>
     <li class="menubar-listitem">
-        <a class="menubar-listitem-a">
+        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Categories">
             <i class="fa fa-comments" aria-hidden="true"></i>
         </a>
     </li>
     <li class="menubar-listitem">
-        <a class="menubar-listitem-a">
+        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Game">
             <i class="fa fa-gamepad" aria-hidden="true"></i>
         </a>
     </li>
