--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -72,3 +72,29 @@ h1, h2 {
     text-decoration: none;
     color: black;
 }
+
+.menubutton {
+    border: none;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    width: 65%;
+    height: 50px;
+    margin: 5px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    outline: none;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    font-size: 14px;
+    background: #368015;
+    color: #fff;
+    box-shadow: 0 6px 4px #0D3E0F;
+    border-radius: 10px;
+    -webkit-appearance: none;
+}
