Set up log in/out

--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -19,11 +19,12 @@
             <i class="fa fa-gamepad" aria-hidden="true"></i>
         </a>
     </li>
-    <li class="menubar-listitem">
-        <a class="btn btn-link" onclick="event.preventDefault();document.getElementById('frm-logout').submit();">
-            Log ud
-        </a>    
-        <form id="frm-logout" method="POST" style="display: none;">
-        </form>
-    </li>
+    @if (Context.User.Identity.IsAuthenticated)
+    {
+        <li class="menubar-listitem">
+            <a class="btn" asp-controller="Account" asp-action="Logout">
+                Log ud
+            </a>    
+        </li>
+    }
 </ul>
