--- a/Øljeopardy/Views/Account/Register.cshtml
+++ b/Øljeopardy/Views/Account/Register.cshtml
@@ -1,14 +1,11 @@
 ﻿@model RegisterViewModel
-@{
-    ViewData["Title"] = "Register";
-}
 
 <h2>@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-md-4">
+    <div>
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-            <h4>Create a new account.</h4>
+            <h4>Opret ny konto.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
