Set up forgotten password

--- a/Øljeopardy/Views/Account/ForgotPassword.cshtml
+++ b/Øljeopardy/Views/Account/ForgotPassword.cshtml
@@ -4,10 +4,9 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="ForgotPassword" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -15,7 +14,7 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="menubutton">Nulstil adgangskode</button>
         </form>
     </div>
 </div>
