--- a/Øljeopardy/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Øljeopardy/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
-}
-
-<h2>@ViewData["Title"]</h2>
+﻿<h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    Tjek din e-mail for at nulstille adgangskoden.
 </p>
