--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -1,30 +1,34 @@
-﻿<ul class="menubar-list">
-    <li class="menubar-listitem">
-        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Index">
+﻿<div class="row menubar-container">
+    <div class="col-md-2"></div>
+    <div class="col-md-2">
+        <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Index">
             <i class="fa fa-home" aria-hidden="true"></i>
         </a>
-    </li>
-    <li class="menubar-listitem">
-        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Rules">
+    </div>
+    <div class="col-md-2">
+        <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Rules">
             <i class="fa fa-legal" aria-hidden="true"></i>
         </a>
-    </li>
-    <li class="menubar-listitem">
-        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Categories">
-            <i class="fa fa-comments" aria-hidden="true"></i>
-        </a>
-    </li>
-    <li class="menubar-listitem">
-        <a class="menubar-listitem-a" asp-controller="Home" asp-action="Game">
-            <i class="fa fa-gamepad" aria-hidden="true"></i>
-        </a>
-    </li>
-    @if (Context.User.Identity.IsAuthenticated)
-    {
-        <li class="menubar-listitem">
-            <a class="btn" asp-controller="Account" asp-action="Logout">
-                Log ud
-            </a>    
-        </li>
-    }
-</ul>
+    </div>
+    <div class="col-md-2">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Categories">
+                <i class="fa fa-comments" aria-hidden="true"></i>
+            </a>
+        }
+    </div>
+    <div class="col-md-2">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Game">
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+            </a>
+        }
+    </div>
+    <div class="col-md-2">
+        <form asp-controller="Account" asp-action="Logout" method="post" class="menubar-listitem-link">
+            <button type="submit" class="btn btn-link">Log ud</button>
+        </form>
+    </div>
+</div>
