--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -2,5 +2,10 @@
 
 <div class="row">
     <hr />
-
+    <div>
+        @ViewData["Message"]
+    </div>
+    <div>
+        <a asp-controller="Home" asp-action="Category"><button class="menubutton">Ny kategori</button></a>
+    </div>  
 </div>
