Category save confirmations and category selection

--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -1,11 +1,22 @@
-﻿<h1>@ViewData["Title"]</h1>
+﻿@model Øljeopardy.Models.JeopardyViewModels.CategoriesViewModel
+
+<h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <hr />
-    <div>
-        @ViewData["Message"]
-    </div>
-    <div>
-        <a asp-controller="Home" asp-action="Category"><button class="menubutton">Ny kategori</button></a>
-    </div>  
+    @if (ViewData["Message"] == "Kategori tilføjet")
+    {
+        <div class="alert alert-success alert-dismissable">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strong>@ViewData["Message"]</strong>
+        </div>
+    }
+    <p>
+        <select asp-for="ChosenCategoryGuid"
+                asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))">
+            <option>Vælg en kategori</option>
+        </select>
+        <div>
+            <a asp-controller="Home" asp-action="Category"><button class="menubutton">Ny kategori</button></a>
+        </div>
+    </p>
 </div>
