--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -3,7 +3,8 @@
 
 <div class="row">
     <hr />
-    <form asp-controller="Home" asp-action="CreateCategory" method="post">
+    <form asp-controller="Category" asp-action="SubmitCategory" method="post">
+        <input asp-for="Id" type="hidden" />
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="row">
             <div class="col-md-12">
