Alerts now dismiss automatically

--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -5,8 +5,7 @@
 <div class="row">
     @if ((string)ViewData["Message"] != "")
     {
-        <div class="alert alert-success alert-dismissable">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <div class="alert alert-success">
             <strong>@ViewData["Message"]</strong>
         </div>
     }
