Logout button icon

--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -102,3 +102,9 @@ h1, h2 {
     border-radius: 10px;
     -webkit-appearance: none;
 }
+
+.fabutton {
+    background: none;
+    padding: 0px;
+    border: none;
+}
