Category page layout

--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -108,3 +108,17 @@ h1, h2 {
     padding: 0px;
     border: none;
 }
+
+.dropdown {
+    font-style: italic;
+    font-size: inherit;
+    width: 80%;
+}
+
+.answer-question-container{
+    margin-bottom: 10px;
+}
+
+.answer-question-input{
+    resize: vertical;
+}
