--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -7,60 +7,73 @@
         <input asp-for="Id" type="hidden" />
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
             </div>
         </div>
         <p>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
                     <label asp-for="AnswerQuestion100.Answer"></label>
-                    <input asp-for="AnswerQuestion100.Answer" class="form-control" />
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <label asp-for="AnswerQuestion100.Question"></label>
-                    <input asp-for="AnswerQuestion100.Question" class="form-control" />
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion200.Answer"></label>
-                    <input asp-for="AnswerQuestion200.Answer" class="form-control" />
+                100
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion100.Answer" class="form-control answer-question-input"></textarea>
                 </div>
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion200.Question"></label>
-                    <input asp-for="AnswerQuestion200.Question" class="form-control" />
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion100.Question" class="form-control answer-question-input"></textarea>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion300.Answer"></label>
-                    <input asp-for="AnswerQuestion300.Answer" class="form-control" />
+                200
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion200.Answer" class="form-control answer-question-input"></textarea>
                 </div>
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion300.Question"></label>
-                    <input asp-for="AnswerQuestion300.Question" class="form-control" />
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion200.Question" class="form-control answer-question-input"></textarea>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion400.Answer"></label>
-                    <input asp-for="AnswerQuestion400.Answer" class="form-control" />
+                300
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion300.Answer" class="form-control answer-question-input"></textarea>
                 </div>
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion400.Question"></label>
-                    <input asp-for="AnswerQuestion400.Question" class="form-control" />
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion300.Question" class="form-control answer-question-input"></textarea>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion500.Answer"></label>
-                    <input asp-for="AnswerQuestion500.Answer" class="form-control" />
+                400
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion400.Answer" class="form-control answer-question-input"></textarea>
                 </div>
-                <div class="col-md-6">
-                    <label asp-for="AnswerQuestion500.Question"></label>
-                    <input asp-for="AnswerQuestion500.Question" class="form-control" />
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion400.Question" class="form-control answer-question-input"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                500
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion500.Answer" class="form-control answer-question-input"></textarea>
+                </div>
+                <div class="col-xs-6">
+                    <textarea asp-for="AnswerQuestion500.Question" class="form-control answer-question-input"></textarea>
                 </div>
             </div>
         </p>
