Added option to swap AnswerQuestions

--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -115,10 +115,14 @@ h1, h2 {
     width: 80%;
 }
 
-.answer-question-container{
+.answer-question-container {
     margin-bottom: 10px;
 }
 
-.answer-question-input{
+.answer-question-input {
     resize: vertical;
+}
+
+.up-down-table {
+    margin: 8px 0 0 -100%;
 }
