Renaming to make project compatible with Azure

--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -1,4 +1,4 @@
-﻿@model Øljeopardy.Models.JeopardyViewModels.CategoryViewModel
+﻿@model Oljeopardy.Models.JeopardyViewModels.CategoryViewModel
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
