--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -1,4 +1,4 @@
-﻿@model Øljeopardy.Models.JeopardyViewModels.CategoriesViewModel
+﻿@model Oljeopardy.Models.JeopardyViewModels.CategoriesViewModel
 
 <h1>@ViewData["Title"]</h1>
 
