--- a/Øljeopardy/Views/Manage/_ManageNav.cshtml
+++ b/Øljeopardy/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using Øljeopardy.Views.Manage
+﻿@using Oljeopardy.Views.Manage
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
