--- a/Øljeopardy/Views/_ViewImports.cshtml
+++ b/Øljeopardy/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using Øljeopardy
-@using Øljeopardy.Models
-@using Øljeopardy.Models.AccountViewModels
-@using Øljeopardy.Models.ManageViewModels
+@using Oljeopardy
+@using Oljeopardy.Models
+@using Oljeopardy.Models.AccountViewModels
+@using Oljeopardy.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
