--- a/Øljeopardy/Views/Account/ConfirmEmail.cshtml
+++ b/Øljeopardy/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Thank you for confirming your email.
+        Tak fordi du bekræftede din e-mail.
     </p>
 </div>
