--- a/Øljeopardy/Views/Account/Lockout.cshtml
+++ b/Øljeopardy/Views/Account/Lockout.cshtml
@@ -4,5 +4,5 @@
 
 <header>
     <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <p class="text-danger">Denne konto er blevet lockoutet. Prøv igen senere.</p>
 </header>
