--- a/Øljeopardy/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Øljeopardy/Views/Account/ResetPasswordConfirmation.cshtml
@@ -4,5 +4,5 @@
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
+    Din adgangskode er nulstrillet. <a asp-action="Login">Klik her for at logge ind</a>.
 </p>
