--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -5,12 +5,17 @@ $borderWidth: 1px;
 
 html, body {
     height: 100%;
-    width: 100%;
 }
 
-html {
-    display: table;
-    margin: auto;
+div, body {
+    margin: 0;
+    padding: 0;
+    font-family: exo, sans-serif;
+}
+
+.wrapper {
+    height: 100%;
+    width: 100%;
 }
 
 body {
@@ -21,12 +26,12 @@ body {
     color: black;
     font-weight: normal;
     line-height: 20px;
-    background: url(beer.jpg) no-repeat center center;
+    background-image: url(beer.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-size: auto 120%;
+    background-color: #999;
     vertical-align: middle;
     overflow: scroll;
 }
@@ -40,7 +45,7 @@ h1, h2 {
     padding: 10px 35px;
     text-align: center;
     max-width: $appWidth;
-    height: 100%;
+    min-height: calc(100vh);
     background-color: $background;
     border: solid;
     border-width: $borderWidth;
