--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -1,10 +1,14 @@
 html, body {
+  height: 100%; }
+
+div, body {
+  margin: 0;
+  padding: 0;
+  font-family: exo, sans-serif; }
+
+.wrapper {
   height: 100%;
   width: 100%; }
-
-html {
-  display: table;
-  margin: auto; }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -14,12 +18,12 @@ body {
   color: black;
   font-weight: normal;
   line-height: 20px;
-  background: url(beer.jpg) no-repeat center center;
+  background-image: url(beer.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-size: auto 120%;
+  background-color: #999;
   vertical-align: middle;
   overflow: scroll; }
 
@@ -31,7 +35,7 @@ h1, h2 {
   padding: 10px 35px;
   text-align: center;
   max-width: 440px;
-  height: 100%;
+  min-height: calc(100vh);
   background-color: rgba(255, 255, 255, 0.4);
   border: solid;
   border-width: 1px; }
