Got rid of warnings

--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -19,7 +19,7 @@
         </form>
 
         <div>
-            <a asp-controller="Category" asp-action="Create"><button class="menubutton">Ny kategori</button></a>
+            <button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button>
         </div>
     </div>
 </div>
