--- a/Øljeopardy/Views/Account/Register.cshtml
+++ b/Øljeopardy/Views/Account/Register.cshtml
@@ -28,7 +28,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Opret</button>
+            <button type="submit" class="menubutton">Opret</button>
         </form>
     </div>
 </div>
