Functionality to add games

--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -19,7 +19,7 @@
         </form>
 
         <div>
-            <button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button>
+            <form><button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button></form>
         </div>
     </div>
 </div>
