--- a/Øljeopardy/Views/Home/Game.cshtml
+++ b/Øljeopardy/Views/Home/Game.cshtml
@@ -1,4 +1,5 @@
-﻿<h1>@ViewData["Title"]</h1>
+﻿@model Oljeopardy.Models.JeopardyViewModels.GameViewModel
+<h1>@ViewData["Title"]</h1>
 
 <div class="row">
     <hr />
