--- a/Øljeopardy/Views/Home/Index.cshtml
+++ b/Øljeopardy/Views/Home/Index.cshtml
@@ -2,13 +2,24 @@
 
 <div class="row">
     <hr />
-    @if (!Context.User.Identity.IsAuthenticated)
-    {
-        <div>
-            <a asp-controller="Account" asp-action="Login"><button class="menubutton">Log ind</button></a>
-        </div>
-        <div>
-            <a asp-controller="Account" asp-action="Register"><button class="menubutton">Ny bruger</button></a>
-        </div>
-    }
+    <form>
+        @if (Context.User.Identity.IsAuthenticated)
+        {
+            <div>
+                <button asp-controller="Game" asp-action="Participate" class="menubutton">Deltag i et spil</button>
+            </div>
+            <div>
+                <button asp-controller="Game" asp-action="Add" class="menubutton">Opret nyt spil</button>
+            </div>
+        }
+        else
+        {
+            <div>
+                <button asp-controller="Account" asp-action="Login" class="menubutton">Log ind</button>
+            </div>
+            <div>
+                <button asp-controller="Account" asp-action="Register" class="menubutton">Ny bruger</button>
+            </div>
+        }
+    </form>
 </div>
