--- a/Øljeopardy/Views/Home/Game.cshtml
+++ b/Øljeopardy/Views/Home/Game.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Oljeopardy.Models.JeopardyViewModels.GameViewModel
 <h1>@ViewData["Title"]</h1>
+<h3>@Model.Game.Name</h3>
 
 <div class="row">
     <hr />
-
 </div>
