Functionality to participate in game

--- a/Øljeopardy/Views/Game/Add.cshtml
+++ b/Øljeopardy/Views/Game/Add.cshtml
@@ -16,7 +16,7 @@
                     <option selected disabled>Vælg en kategori</option>
                 </select>
             </div>
-            <input type="button" class="menubutton" value="Opret spil" onClick="ValidateForm(this.form)"/>
+            <input type="button" class="menubutton" value="Opret spil" onClick="ValidateForm(this.form, 'AddGame')"/>
         </div>
     </form>
 </div>
