--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -1,4 +1,5 @@
-﻿$background: rgba(255,255,255,0.4);
+﻿
+$background: rgba(255,255,255,0.4);
 $navbarBackground: rgba(255,255,255,0.8);
 $appWidth: 440px;
 $borderWidth: 1px;
@@ -38,6 +39,42 @@ body {
 
 h1, h2 {
     font-family: "Times New Roman", Times, serif;
+}
+
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
 }
 
 .container {
