--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -1,16 +1,17 @@
-﻿<div class="row menubar-container">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2">
+﻿@using Microsoft.AspNetCore.Http
+@using Oljeopardy.DataAccess
+<div class="row menubar-container">
+    <div class="col-xs-5ths">
         <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Index">
             <i class="fa fa-home" aria-hidden="true"></i>
         </a>
     </div>
-    <div class="col-xs-2">
+    <div class="col-xs-5ths">
         <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Rules">
             <i class="fa fa-legal" aria-hidden="true"></i>
         </a>
     </div>
-    <div class="col-xs-2">
+    <div class="col-xs-5ths">
         @if (User.Identity.IsAuthenticated)
         {
             <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Categories">
@@ -18,7 +19,7 @@
             </a>
         }
     </div>
-    <div class="col-xs-2">
+    <div class="col-xs-5ths">
         @if (User.Identity.IsAuthenticated)
         {
             <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Game">
@@ -26,7 +27,7 @@
             </a>
         }
     </div>
-    <div class="col-xs-2">
+    <div class="col-xs-5ths">
         <form asp-controller="Account" asp-action="Logout" method="post" class="menubar-listitem-icon">
             <button type="submit" class="fabutton"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
         </form>
