Added complexity to game functionality

--- a/Øljeopardy/Views/Game/Add.cshtml
+++ b/Øljeopardy/Views/Game/Add.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     <hr />
     Start et nyt spil
-    <form asp-controller="Home" asp-action="Game">
+    <form asp-controller="Game" asp-action="CompleteAdd">
         <div class="row">
             <div class="col-xs-12">
                 <label asp-for="GameName"></label>
