--- a/Øljeopardy/Views/Home/Game.cshtml
+++ b/Øljeopardy/Views/Home/Game.cshtml
@@ -1,6 +1,9 @@
 ﻿@model Oljeopardy.Models.JeopardyViewModels.GameViewModel
 <h1>@ViewData["Title"]</h1>
-<h3>@Model.Game.Name</h3>
+@if (@Model.Game != null)
+{
+    <h3>@Model.Game.Name</h3>
+}
 
 <div class="row">
     <hr />
