--- a/Øljeopardy/Views/Account/ForgotPassword.cshtml
+++ b/Øljeopardy/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Nulstil adgangskode";
 }
 
 <h2>@ViewData["Title"]</h2>
