--- a/Øljeopardy/Views/Account/Login.cshtml
+++ b/Øljeopardy/Views/Account/Login.cshtml
@@ -34,12 +34,12 @@
                     <button type="submit" class="menubutton">Log ind</button>
                 </div>
                 <div class="form-group">
-                    <p>
+                    <div class="textbutton">
                         <a asp-action="ForgotPassword">Glemt din adgangskode?</a>
-                    </p>
-                    <p>
+                    </div>
+                    <div class="textbutton">
                         <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Ny bruger</a>
-                    </p>
+                    </div>
                 </div>
             </form>
         </section>
