--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -1,134 +1,78 @@
-﻿
-$background: rgba(255,255,255,0.4);
-$navbarBackground: rgba(255,255,255,0.8);
-$appWidth: 440px;
-$borderWidth: 1px;
-
-html, body {
+﻿html {
     height: 100%;
-}
-
-div, body {
-    margin: 0;
-    padding: 0;
-    font-family: exo, sans-serif;
-}
-
-.wrapper {
-    height: 100%;
-    width: 100%;
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-variant: normal;
     color: black;
     font-weight: normal;
     line-height: 20px;
+
+    padding-top: 50px;
     background-image: url(beer.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: auto 120%;
-    background-color: #999;
-    vertical-align: middle;
-    overflow: scroll;
 }
 
-h1, h2 {
-    font-family: "Times New Roman", Times, serif;
-}
-
-.col-xs-5ths,
-.col-sm-5ths,
-.col-md-5ths,
-.col-lg-5ths {
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
-.col-xs-5ths {
-    width: 20%;
-    float: left;
-}
-
-@media (min-width: 768px) {
-    .col-sm-5ths {
-        width: 20%;
-        float: left;
-    }
-}
-
-@media (min-width: 992px) {
-    .col-md-5ths {
-        width: 20%;
-        float: left;
-    }
-}
-
-@media (min-width: 1200px) {
-    .col-lg-5ths {
-        width: 20%;
-        float: left;
-    }
-}
-
-.container {
-    margin: 0 auto;
-    padding: 10px 35px;
+h1 {
     text-align: center;
-    max-width: $appWidth;
-    min-height: calc(100vh);
-    background-color: $background;
-    border: solid;
-    border-width: $borderWidth;
 }
 
-.menubar-container {
-    margin: 0 auto;
-    overflow: hidden;
-    background-color: $navbarBackground;
-    font-size: 30px;
-    text-align: center;
-    max-width: $appWidth;
-    border-left: solid;
-    border-right: solid;
-    border-top: solid;
-    border-width: $borderWidth;
-}
-
-.menubar-listitem {
-    display: inline;
-}
-
-.menubar-listitem-icon {
-    display: inline-block;
-    text-align: center;
-    padding: 10px 0;
-    text-decoration: none;
+hr {
+    border-color: black;
+    background-color: black;
     color: black;
 }
 
-.menubar-listitem-link {
-    padding: 9px 0 7px 0;
-    float: right;
-    margin-right: -10px;
+.navbar-default {
+    background-color: rgba(255,255,255,0.7);
+    border-color: black;
+}
+
+.navbar-inverse {
+    background-color: rgba(0,0,0,0.85);
+    border-color: white;
+}
+
+.navbar-icon {
+    margin-right: 15px;
+}
+
+.body-content {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.fabutton {
+    background: none;
+    padding: 0px;
+    border: none;
+}
+
+.dropdown {
+    font-size: inherit;
+}
+
+.answer-question-container {
+    margin-bottom: 10px;
+}
+
+.form-control {
+    font-size: 16px;
 }
 
 .menubutton {
     border: none;
     font-family: inherit;
     font-size: inherit;
-    color: inherit;
     background: none;
     cursor: pointer;
     width: 65%;
     height: 50px;
-    margin: 5px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 700;
@@ -143,18 +87,53 @@ h1, h2 {
     box-shadow: 0 6px 4px #0D3E0F;
     border-radius: 10px;
     -webkit-appearance: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.fabutton {
-    background: none;
-    padding: 0px;
-    border: none;
+.textbutton {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.dropdown {
-    font-style: italic;
-    font-size: inherit;
-    width: 80%;
+.button-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.arrow-container-up {
+    padding-top: 20px;
+    font-size: 2em;
+}
+
+.arrow-container-down {
+    padding-top: 5px;
+    font-size: 2em;
+}
+
+.arrow-button {
+    display: block;
+}
+
+.answer-label-container {
+    margin-top: 20px;
+    font-size: 2em;
+}
+
+.question-label-container {
+    margin-top: 20px;
+    right: 7px;
+    font-size: 2em;
+}
+
+.points-group {
+    margin-bottom: 10px;
+}
+
+.points-container {
+    font-weight: 700;
 }
 
 .answer-question-container {
@@ -163,12 +142,4 @@ h1, h2 {
 
 .answer-question-input {
     resize: vertical;
-}
-
-.up-down-table {
-    margin: 8px 0 0 -100%;
-}
-
-.form-control {
-    font-size: 16px;
 }
