--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -13,121 +13,137 @@
             </div>
         </div>
         <p>
-            <div class="row answer-question-container">
-                <div class="col-xs-6">
-                    <label asp-for="AnswerQuestion100.Answer"></label>
-                </div>
-                <div class="col-xs-5">
-                    <label asp-for="AnswerQuestion100.Question"></label>
+            <div class="row points-group">
+                <div style="text-align: center">
+                    100
                 </div>
             </div>
-            <div class="row">
-                100
-            </div>
             <div class="row answer-question-container">
-                <div class="col-xs-6">
+                <div class="col-xs-1 col-xs-offset-1 answer-label-container">
+                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion100.Answer" class="form-control answer-question-input" id="a1"></textarea>
                 </div>
-                <div class="col-xs-5">
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-1 col-xs-offset-1 question-label-container">
+                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion100.Question" class="form-control answer-question-input" id="q1"></textarea>
                 </div>
-                <div class="col-xs-1">
-                    <table class="up-down-table">
-                        <tr>
-                            <td style="visibility: hidden;"><button type="button" class="fabutton" onclick="MoveAnswerQuestion(1,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(1,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                    </table>
+                <div class="col-xs-2 arrow-container-down">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(1,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="row">
-                200
+            <div class="row points-group">
+                <div style="text-align: center">
+                    200
+                </div>
             </div>
             <div class="row answer-question-container">
-                <div class="col-xs-6">
+                <div class="col-xs-1 col-xs-offset-1 answer-label-container">
+                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion200.Answer" class="form-control answer-question-input" id="a2"></textarea>
                 </div>
-                <div class="col-xs-5">
+                <div class="col-xs-2 arrow-container-up">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                </div>
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-1 col-xs-offset-1 question-label-container">
+                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion200.Question" class="form-control answer-question-input" id="q2"></textarea>
                 </div>
-                <div class="col-xs-1">
-                    <table class="up-down-table">
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(2,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(2,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                    </table>
+                <div class="col-xs-2 arrow-container-down">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(2,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="row">
-                300
+            <div class="row points-group">
+                <div style="text-align: center">
+                    300
+                </div>
             </div>
             <div class="row answer-question-container">
-                <div class="col-xs-6">
+                <div class="col-xs-1 col-xs-offset-1 answer-label-container">
+                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion300.Answer" class="form-control answer-question-input" id="a3"></textarea>
                 </div>
-                <div class="col-xs-5">
+                <div class="col-xs-2 arrow-container-up">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
+                </div>
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-1 col-xs-offset-1 question-label-container">
+                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion300.Question" class="form-control answer-question-input" id="q3"></textarea>
                 </div>
-                <div class="col-xs-1">
-                    <table class="up-down-table">
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(3,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(3,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                    </table>
+                <div class="col-xs-2 arrow-container-down">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(3,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
                 </div>
             </div>
-            <div class="row">
-                400
+            <div class="row points-group">
+                <div style="text-align: center">
+                    400
+                </div>
             </div>
             <div class="row answer-question-container">
-                <div class="col-xs-6">
+                <div class="col-xs-1 col-xs-offset-1 answer-label-container">
+                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion400.Answer" class="form-control answer-question-input" id="a4"></textarea>
                 </div>
-                <div class="col-xs-5">
-                    <textarea asp-for="AnswerQuestion400.Question" class="form-control answer-question-input" id="q4"></textarea>
+                <div class="col-xs-2 arrow-container-up">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
-                <div class="col-xs-1">
-                    <table class="up-down-table">
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(4,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(4,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="row">
-                500
             </div>
             <div class="row answer-question-container">
-                <div class="col-xs-6">
+                <div class="col-xs-1 col-xs-offset-1 question-label-container">
+                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
+                    <textarea asp-for="AnswerQuestion400.Question" class="form-control answer-question-input" id="q4"></textarea>
+                </div>
+                <div class="col-xs-2 arrow-container-down">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(4,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button>
+                </div>
+            </div>
+            <div class="row points-group">
+                <div style="text-align: center">
+                    500
+                </div>
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-1 col-xs-offset-1 answer-label-container">
+                    <i class="fa fa-exclamation fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
                     <textarea asp-for="AnswerQuestion500.Answer" class="form-control answer-question-input" id="a5"></textarea>
                 </div>
-                <div class="col-xs-5">
-                    <textarea asp-for="AnswerQuestion500.Question" class="form-control answer-question-input" id="q5"></textarea>
+                <div class="col-xs-2 arrow-container-up">
+                    <button type="button" class="fabutton arrow-button" onclick="MoveAnswerQuestion(5,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button>
                 </div>
-                <div class="col-xs-1">
-                    <table class="up-down-table">
-                        <tr>
-                            <td><button type="button" class="fabutton" onclick="MoveAnswerQuestion(5,'up')"><i class="fa fa-sort-up fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td style="visibility: hidden;"><button type="button" class="fabutton" onclick="MoveAnswerQuestion(5,'down')"><i class="fa fa-sort-down fa-lg" aria-hidden="true"></i></button></td>
-                        </tr>
-                    </table>
+            </div>
+            <div class="row answer-question-container">
+                <div class="col-xs-1 col-xs-offset-1 question-label-container">
+                    <i class="fa fa-question fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-8">
+                    <textarea asp-for="AnswerQuestion500.Question" class="form-control answer-question-input" id="q5"></textarea>
                 </div>
             </div>
         </p>
-        <div>
+        <div class="row button-container" style="margin-top: 30px;">
             <button type="submit" class="menubutton">Gem</button>
         </div>
     </form>
