--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Oljeopardy.Models.JeopardyViewModels.CategoriesViewModel
 
 <h1>@ViewData["Title"]</h1>
+<hr />
 
 <div class="row">
     @if ((string)ViewData["Message"] != "")
@@ -11,15 +12,25 @@
     }
     <div>
         <form asp-controller="Category" asp-action="Edit">
-            <select asp-for="ChosenCategoryGuid"
-                    asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
-                <option selected disabled>Vælg en kategori</option>
-            </select>
-            <input type="button" class="menubutton" value="Rediger kategori" onClick="ValidateForm(this.form)"/>
+            <div class="row">
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <select class="form-control" asp-for="ChosenCategoryGuid"
+                                asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
+                            <option selected disabled>Vælg en kategori</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row button-container">
+                <input type="button" class="menubutton" value="Rediger kategori" onClick="ValidateForm(this.form, 'Categories')" />
+            </div>
         </form>
-
-        <div>
-            <form><button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button></form>
-        </div>
     </div>
+
+
+    <div class="row button-container">
+        <form><button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button></form>
+    </div>
+</div>
 </div>
