--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -1,35 +1,27 @@
 ﻿@using Microsoft.AspNetCore.Http
 @using Oljeopardy.DataAccess
-<div class="row menubar-container">
-    <div class="col-xs-5ths">
-        <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Index">
-            <i class="fa fa-home" aria-hidden="true"></i>
-        </a>
-    </div>
-    <div class="col-xs-5ths">
-        <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Rules">
-            <i class="fa fa-legal" aria-hidden="true"></i>
-        </a>
-    </div>
-    <div class="col-xs-5ths">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Categories">
-                <i class="fa fa-comments" aria-hidden="true"></i>
-            </a>
-        }
-    </div>
-    <div class="col-xs-5ths">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <a class="menubar-listitem-icon" asp-controller="Home" asp-action="Game">
-                <i class="fa fa-gamepad" aria-hidden="true"></i>
-            </a>
-        }
-    </div>
-    <div class="col-xs-5ths">
-        <form asp-controller="Account" asp-action="Logout" method="post" class="menubar-listitem-icon">
-            <button type="submit" class="fabutton"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
-        </form>
+
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a asp-area="" asp-controller="Home" asp-action="Rules"><i class="fa fa-legal navbar-icon" aria-hidden="true"></i> Regler</a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li><a asp-area="" asp-controller="Home" asp-action="Categories"><i class="fa fa-comments navbar-icon" aria-hidden="true"></i> Kategorier</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Game"><i class="fa fa-gamepad navbar-icon" aria-hidden="true"></i> Spil</a></li>
+                }
+            </ul>
+            @await Html.PartialAsync("_LoginPartial")
+        </div>
     </div>
 </div>
