--- a/Øljeopardy/Views/Shared/_Layout.cshtml
+++ b/Øljeopardy/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Øljeopardy</title>
 
@@ -19,10 +20,8 @@
     </environment>
 </head>
 <body>
-    <div class="wrapper">
-
     @Html.Partial("~/Views/Shared/Navbar.cshtml")
-    <div class="container">
+    <div class="container body-content">
         @RenderBody()
     </div>
 
