--- a/Øljeopardy/Views/Game/Add.cshtml
+++ b/Øljeopardy/Views/Game/Add.cshtml
@@ -5,17 +5,19 @@
 <div class="row">
     <form asp-controller="Game" asp-action="CompleteAdd">
         <div class="row">
-            <div class="col-xs-12">
-                <label asp-for="GameName"></label>
-                <input asp-for="GameName" class="form-control" />
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <label asp-for="GameName"></label>
+                    <input asp-for="GameName" class="form-control" />
+                </div>
+                <div class="col-xs-12">
+                    <select class="form-control" asp-for="ChosenCategoryGuid"
+                            asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
+                        <option selected disabled>Vælg en kategori</option>
+                    </select>
+                </div>
+                <input type="button" class="menubutton" value="Opret spil" onClick="ValidateForm(this.form, 'AddGame')" />
             </div>
-            <div class="col-xs-12">
-                <select asp-for="ChosenCategoryGuid"
-                        asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
-                    <option selected disabled>Vælg en kategori</option>
-                </select>
-            </div>
-            <input type="button" class="menubutton" value="Opret spil" onClick="ValidateForm(this.form, 'AddGame')"/>
         </div>
     </form>
 </div>
