--- a/Øljeopardy/Views/Game/Participate.cshtml
+++ b/Øljeopardy/Views/Game/Participate.cshtml
@@ -3,20 +3,21 @@
 
 <div class="row">
     <hr />
-    Deltag i et spil
     <form asp-controller="Game" asp-action="CompleteParticipation">
         <div class="row">
-            <div class="col-xs-12">
-                <select asp-for="ChosenGameGuid"
-                        asp-items="@(new SelectList(Model.GameList, "Id", "Name"))" class="dropdown">
-                    <option selected disabled>Vælg et spil</option>
-                </select>
-            </div>
-            <div class="col-xs-12">
-                <select asp-for="ChosenCategoryGuid"
-                        asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
-                    <option selected disabled>Vælg en kategori</option>
-                </select>
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <select class="form-control" asp-for="ChosenGameGuid"
+                            asp-items="@(new SelectList(Model.GameList, "Id", "Name"))" class="dropdown">
+                        <option selected disabled>Vælg et spil</option>
+                    </select>
+                </div>
+                <div class="col-xs-12">
+                    <select class="form-control" asp-for="ChosenCategoryGuid"
+                            asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
+                        <option selected disabled>Vælg en kategori</option>
+                    </select>
+                </div>
             </div>
             <input type="button" class="menubutton" value="Deltag i spil" onClick="ValidateForm(this.form, 'Participate')" />
         </div>
