--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -15,7 +15,7 @@ body {
   background-attachment: fixed;
   background-size: auto 120%; }
 
-h1 {
+h1, h3 {
   text-align: center; }
 
 hr {
@@ -118,3 +118,50 @@ hr {
 
 .answer-question-input {
   resize: vertical; }
+
+.form-group .form-control {
+  margin-bottom: 10px; }
+
+.button-group {
+  margin-top: 30px;
+  margin-bottom: 30px; }
+
+.category-radio-button {
+  display: none; }
+
+.category-radio-button-label {
+  display: inline-block;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  transition: all 0.3s;
+  color: #fff;
+  -webkit-appearance: none;
+  font-size: 15px;
+  padding: 10px 10px 0px 10px;
+  height: 37px;
+  vertical-align: top;
+  border-radius: 5px; }
+
+.category-radio-button-label.active {
+  background: #368015;
+  box-shadow: 0 2px #553F00; }
+
+.category-radio-button-label.inactive {
+  background: #ff0000;
+  box-shadow: 0 2px #aa0000; }
+
+.selected {
+  background: #bbbbbb !important; }
+
+.category-select-container {
+  text-align: center;
+  margin-bottom: 10px; }
